<resources>
    <string name="app_name">PPAB-09_L0122012_Alfath Roziq Widhayaka</string>
    <string name="titleHome">Free Games</string>
    <string name="id">ID</string>
    <string name="title">Game Title</string>
    <string name="short_description">Description</string>
    <string name="genre">Genre</string>
    <string name="platform">Platform</string>
    <string name="publisher">Publisher</string>
    <string name="desc_photo">Photo Description</string>
    <string name="listGame">List All Game</string>
</resources>