<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cvUser"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_margin="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="12dp"
    app:cardCornerRadius="7dp"
    app:cardBackgroundColor="@color/grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp">

        <ImageView
            android:id="@+id/tvImg"
            android:layout_width="130dp"
            android:layout_height="180dp"
            app:srcCompat="@drawable/ic_launcher_background"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/desc_photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tvImg"
            android:orientation="vertical"
            android:layout_marginStart="12dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/title" />

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_description" />

            <TextView
                android:id="@+id/tvPlatform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/platform" />

            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>